--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Philippe leal"
   description: "Install and configure freeipa server on centos"
-  role_name: apps_freeipa_server
+  role_name: ansible-apps_freeipa-server
   license: "MIT"
   min_ansible_version: 2.8
 
