--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,7 +2,15 @@
 - name: Converge
   hosts: all
   become: true
-  tasks:
-    - name: "Include apps_freeipa_server"
-      include_role:
-        name: "apps_freeipa_server"
+
+  pre_tasks:
+    - name: Update apt cache.
+      apt: update_cache=yes cache_valid_time=600
+      when: ansible_os_family == 'Debian'
+      changed_when: false
+
+  roles:
+    - role: apps_freeipa-server
+
+  vars:
+    nodejs_install_npm_user: root
