--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,13 +3,14 @@ galaxy_info:
   author: "Philippe leal"
   description: "Install and configure freeipa server on centos"
   role_name: ansible-apps_freeipa_server
-  license: "MIT"
+  license: "license: Apache License, Version 2.0"
   min_ansible_version: 2.8
 
   platforms:
     - name: "Centos"
       versions:
         - "8"
+        - "7"
 
   galaxy_tags:
     - freeipa
