remove non compatible test centos7

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ env:
     # - MOLECULE_DISTRO: debian9
     # - MOLECULE_DISTRO: debian8
     - MOLECULE_DISTRO: centos8
-    - MOLECULE_DISTRO: centos7
+    # - MOLECULE_DISTRO: centos7
     # - MOLECULE_DISTRO: fedora33
     # - MOLECULE_DISTRO: fedora32
 
