--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,20 @@
 ---
 galaxy_info:
-  author: "Philippe leal"
-  description: "Install and configure freeipa server on centos"
-  role_name: ansible-apps_freeipa_server
-  license: "license: Apache License, Version 2.0"
+  author: lotusnoir
+  role_name: apps_freeipa_server
+  description: "Install and configure freeipa server"
+  license: "Apache License, Version 2.0"
   min_ansible_version: 2.8
 
   platforms:
-    - name: "Centos"
+    - name: "RedHat"
+      versions:
+        - "Maipo"
+    - name: "CentOS"
+      versions:
+        - "8"
+        - "7"
+    - name: "Rocky"
       versions:
         - "8"
 
@@ -15,7 +22,6 @@ galaxy_info:
     - freeipa
     - ldap
     - kerberos
-    - system
     - sudo
     - users
 
