--- a/tasks/check.yml
+++ b/tasks/check.yml
@@ -19,14 +19,14 @@
 ### TEST RELEASE
 - name: Test the release is supported. End the host if not.
   set_fact:
-    supported_releases: "{{ (galaxy_info.platforms| selectattr('name', 'match', ansible_distribution_major_version)| list|first).versions }}"
+    supported_releases: "{{ (galaxy_info.platforms| selectattr('name', 'match', ansible_distribution)| list|first).versions }}"
 - block:
     - name: Ending play...
       debug:
         msg: "{{ ansible_distribution_release }} not supported. End of host."
     - name: Ending play...
       meta: end_host
-  when: ansible_distribution_release not in supported_releases
+  when: ansible_distribution_release not in supported_releases and ansible_distribution_major_version not in supported_releases
 
 - name: The distribution and release is supported. Continue play.
   debug:
