--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,19 +1,15 @@
 ---
-- name: "Ensure valid hostname"
-  hostname:
-    name: "{{ ansible_fqdn }}"
+- when: freeipa_server_configure_hostname
+  block:
+    - name: "Ensure valid hostname"
+      hostname:
+        name: "{{ freeipa_server_hostname }}"
 
-- name: "Ensure hostname resolve to ip and not localhost"
-  replace:
-    path: /etc/hosts
-    regexp: '^127.0.0.1     {{ ansible_fqdn }}'
-    replace: '{{ ansible_default_ipv4.address }}\t{{ ansible_fqdn }}'
-
-#- name: "Ensure hostname resolve to ip and not localhost"
-#  lineinfile:
-#    dest: /etc/hosts
-#    line: "{{ ansible_default_ipv4.address }}\t{{ ansible_fqdn }}"
-#    insertbefore: '^127.0.0.1'
+    - name: "Ensure hostname resolve to ip and not localhost"
+      replace:
+        path: /etc/hosts2
+        regexp: '^127.0.0.1(\s+.*)?$'
+        replace: '{{ ansible_default_ipv4.address }}\1 {{ freeipa_server_hostname }}'
 
 - name: "Ensure ipv6 is not disable"
   sysctl:
@@ -40,11 +36,6 @@
     state: present
   register: freeipa_install
 
-#- name: "Remove firewalld packages"
-#  package:
-#    name: ['firewalld']
-#    state: absent
-
 - when: freeipa_server_configure_firewalld
   block:
     - name: "Open firewall ports"
@@ -52,7 +43,6 @@
         service: "{{ item }}"
         permanent: true
         state: enabled
-      notify: reload firewalld
       with_items:
         - http
         - https
@@ -61,25 +51,25 @@
         - freeipa-ldap
         - freeipa-ldaps
         - kerberos
+      notify: reload firewalld
       tags: firewall
-    
+
     - name: "Open firewall ports for prometheus"
       firewalld:
         port: "{{ item }}"
         permanent: true
         state: enabled
-      notify: reload firewalld
       with_items:
         - 9100/tcp
         - 9128/tcp
+      notify: reload firewalld
       tags: firewall
-    
+
     - name: "Open firewall ports for ad trust"
       firewalld:
         port: "{{ item }}"
         permanent: true
         state: enabled
-      notify: reload firewalld
       with_items:
         - 135/tcp
         - 138/tcp
@@ -91,14 +81,15 @@
         - 139/udp
         - 389/udp
         - 445/udp
+      notify: reload firewalld
       tags: firewall
 
-- when: freeipa_install.changed
+- when: freeipa_install.changed or freeipa_server_force_install|bool
   block:
     - name: "Change Umask to 0022 to make installer working"
       shell: umask 0022 && umask
       notify: restart ipa services
-    
+
     - name: "MASTER - Configure FreeIPA server (take a while )"
       args:
         creates: /etc/ipa/default.conf
@@ -106,23 +97,23 @@
       when:
         - freeipa_server_type == 'master'
       notify: restart ipa services
-    
+
     - name: "REPLICA 1/3 - Install ipa client"
       command: "ipa-client-install -U {{ freeipa_client_install_options | join(' ') }}"
       when:
         - freeipa_server_type == 'replica'
-    
+
     - name: "REPLICA 2/3 - add to ipservers group"
       command: "ipa hostgroup-add-member ipaservers --hosts {{ ansible_fqdn }}"
       delegate_to: "{{ freeipa_server_master_fqdn }}"
       when:
         - freeipa_server_type == 'replica'
-    
+
     - name: "REPLICA 3/3 - Install replica (take a while)"
       command: "{{ freeipa_launch_command }} {{ freeipa_replica_install_options | join(' ') }}"
       when:
         - freeipa_server_type == 'replica'
-    
+
     - name: "Global - Ensure admin config / auth to Kerberos realm"
       shell: |
         set -o pipefail
