--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ push_src_on_github:
     - COMMENT=$(git log -1 --pretty=%B | head -1)
   script:
     - git clone git@github.com:${GITHUB_USER}/ansible-apps_freeipa_server.git /tmp/ansible-apps_freeipa_server
+    - find /tmp/ansible-apps_freeipa_server -mindepth 1 -maxdepth 1 ! -name '.git' -exec rm -rf "{}" +;
     - rm -rf .git
     - cp -r . /tmp/ansible-apps_freeipa_server/
     - cd /tmp/ansible-apps_freeipa_server
