--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,6 +7,9 @@ galaxy_info:
   min_ansible_version: 2.8
 
   platforms:
+    - name: "Ubuntu"
+      versions:
+        - "jammy"
     - name: "RedHat"
       versions:
         - "Maipo"
@@ -15,6 +18,10 @@ galaxy_info:
         - "7"
     - name: "Rocky"
       versions:
+        - "8"
+    - name: "OracleLinux"
+      versions:
+        - "7"
         - "8"
 
   galaxy_tags:
