--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,18 +1,19 @@
 ---
-- when: freeipa_server_configure_hostname
+- name: "Prepare host"
+  when: freeipa_server_configure_hostname
   block:
     - name: "Ensure valid hostname"
-      hostname:
+      ansible.builtin.hostname:
         name: "{{ freeipa_server_hostname }}"
 
     - name: "Ensure hostname resolve to ip and not localhost"
-      replace:
-        path: /etc/hosts2
+      ansible.builtin.replace:
+        path: '{{ freeipa_server_hosts_path }}'
         regexp: '^127.0.0.1(\s+.*)?$'
         replace: '{{ ansible_default_ipv4.address }}\1 {{ freeipa_server_hostname }}'
 
 - name: "Ensure ipv6 is not disable"
-  sysctl:
+  ansible.builtin.sysctl:
     name: net.ipv6.conf.all.disable_ipv6
     value: '0'
     sysctl_set: true
@@ -20,26 +21,27 @@
     reload: true
 
 - name: "Install rng-tools for better entropie"
-  package:
+  ansible.builtin.package:
     name: rng-tools
     state: present
 
 - name: "Enable and start rng-tools"
-  service:
+  ansible.builtin.service:
     name: rngd
     enabled: true
     state: started
 
 - name: "Install required packages"
-  package:
+  ansible.builtin.package:
     name: ['@idm:DL1', 'freeipa-server', 'firewalld', 'ipa-server-trust-ad', 'samba-client']
     state: present
   register: freeipa_install
 
-- when: freeipa_server_configure_firewalld
+- name: "Check tasks"
+  when: freeipa_server_configure_firewalld
   block:
     - name: "Open firewall ports"
-      firewalld:
+      ansible.builtin.firewalld:
         service: "{{ item }}"
         permanent: true
         state: enabled
@@ -55,7 +57,7 @@
       tags: firewall
 
     - name: "Open firewall ports for prometheus"
-      firewalld:
+      ansible.builtin.firewalld:
         port: "{{ item }}"
         permanent: true
         state: enabled
@@ -66,7 +68,7 @@
       tags: firewall
 
     - name: "Open firewall ports for ad trust"
-      firewalld:
+      ansible.builtin.firewalld:
         port: "{{ item }}"
         permanent: true
         state: enabled
@@ -84,38 +86,40 @@
       notify: reload firewalld
       tags: firewall
 
-- when: freeipa_install.changed or freeipa_server_force_install|bool
+- name: "Install tasks"
+  when: freeipa_install.changed or freeipa_server_force_install|bool
   block:
     - name: "Change Umask to 0022 to make installer working"
-      shell: umask 0022 && umask
+      ansible.builtin.shell: umask 0022 && umask
+      changed_when: false
       notify: restart ipa services
 
     - name: "MASTER - Configure FreeIPA server (take a while )"
+      ansible.builtin.command: "{{ freeipa_launch_command }} {{ freeipa_server_install_options | join(' ') }}"
       args:
         creates: /etc/ipa/default.conf
-      command: "{{ freeipa_launch_command }} {{ freeipa_server_install_options | join(' ') }}"
       when:
         - freeipa_server_type == 'master'
       notify: restart ipa services
 
     - name: "REPLICA 1/3 - Install ipa client"
-      command: "ipa-client-install -U {{ freeipa_client_install_options | join(' ') }}"
+      ansible.builtin.command: "ipa-client-install -U {{ freeipa_client_install_options | join(' ') }}"
       when:
         - freeipa_server_type == 'replica'
 
     - name: "REPLICA 2/3 - add to ipservers group"
-      command: "ipa hostgroup-add-member ipaservers --hosts {{ ansible_fqdn }}"
+      ansible.builtin.command: "ipa hostgroup-add-member ipaservers --hosts {{ ansible_fqdn }}"
       delegate_to: "{{ freeipa_server_master_fqdn }}"
       when:
         - freeipa_server_type == 'replica'
 
     - name: "REPLICA 3/3 - Install replica (take a while)"
-      command: "{{ freeipa_launch_command }} {{ freeipa_replica_install_options | join(' ') }}"
+      ansible.builtin.command: "{{ freeipa_launch_command }} {{ freeipa_replica_install_options | join(' ') }}"
       when:
         - freeipa_server_type == 'replica'
 
     - name: "Global - Ensure admin config / auth to Kerberos realm"
-      shell: |
+      ansible.builtin.shell: |
         set -o pipefail
         echo '{{ freeipa_server_admin_password }}' | kinit admin
       changed_when: false
