--- a/tasks/asserts.yml
+++ b/tasks/asserts.yml
@@ -2,7 +2,7 @@
 #- name: "Ensure ipv6 is not disable"
 #  ansible.builtin.sysctl:
 #    name: net.ipv6.conf.lo.disable_ipv6
-#    value: '1'
+#    value: '0'
 #    sysctl_set: true
 #    state: present
 #    reload: true
@@ -10,8 +10,24 @@
 - name: Check inventory_hostname to fqdn
   ansible.builtin.assert:
     that:
-      - inventory_hostname == ansible_facts["fqdn"]
+      - inventory_hostname == ansible_facts["hostname"]
     fail_msg: Hostname does not match inventory
+    quiet: true
+
+- name: Get hostanme length
+  ansible.builtin.shell: |
+    set -o pipefail
+    echo $(hostname -f) | wc -m
+  args:
+    executable: /bin/bash
+  register: hostname_length
+  changed_when: false
+
+- name: Check hostname length
+  ansible.builtin.assert:
+    that:
+      - hostname_length.stdout <= "64"
+    fail_msg: Hostname is too long, please make it shorter
     quiet: true
 
 - name: check parameter net.ipv6.conf.lo.disable_ipv6
@@ -26,6 +42,6 @@
 - name: Check lo ipv6 is enable in kernel
   ansible.builtin.assert:
     that:
-      - ipv6_lo_conf.stdout == "1"
-    fail_msg: Ipv6 not enable please add net.ipv6.conf.lo.disable_ipv6 = 1 in sysctl
+      - ipv6_lo_conf.stdout == "0"
+    fail_msg: Ipv6 not enable please add net.ipv6.conf.lo.disable_ipv6 = 0 in sysctl
     quiet: true
