--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -9,3 +9,6 @@
   ansible.builtin.service:
     name: firewalld
     state: reloaded
+
+- name: ipa restart
+  ansible.builtin.command: ipactl restart
