--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,14 +1,15 @@
 ---
-- name: restart ipa services
+- name: Restart ipa services
   ansible.builtin.service:
     enabled: true
     name: ipa
     state: restarted
 
-- name: reload firewalld
+- name: Reload firewalld
   ansible.builtin.service:
     name: firewalld
     state: reloaded
 
-- name: ipa restart
+- name: Ipa restart
   ansible.builtin.command: ipactl restart
+  changed_when: false
