--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,23 +2,18 @@
 - name: "Import asserts tasks"
   ansible.builtin.import_tasks: asserts.yml
 
-- name: "Import prepare tasks"
-  ansible.builtin.import_tasks: prepare.yml
-
 - name: "Import firewalld tasks"
   ansible.builtin.import_tasks: firewalld.yml
+  when: freeipa_server_configure_firewalld | bool
+
+- name: "Install rng-tools for better entropie"
+  ansible.builtin.package:
+    name: rng-tools
+    state: present
 
 - name: "Install required packages"
   ansible.builtin.package:
-    name:
-      - ipa-server
-      - ipa-server-dns
-      - ipa-server-trust-ad
-      - patch
-      - ipa-healthcheck
-      - ipa-client-epn
-    # - samba-client
-    #name: ['@idm:DL1', 'freeipa-server', 'firewalld', 'ipa-server-trust-ad', 'samba-client']
+    name: "{{ freeipa_packages }}"
     state: present
   register: freeipa_install
 
@@ -26,16 +21,14 @@
   when: freeipa_install.changed or freeipa_server_force_install|bool
   block:
     - name: "MASTER - Configure FreeIPA server (take a while )"
-      ansible.builtin.shell: "umask 0022 && {{ freeipa_launch_command }} {{ freeipa_server_install_options | join(' ') }}"
+      ansible.builtin.shell: "umask 0022 && ipa-server-install --unattended {{ freeipa_server_install_options | join(' ') }}"
       changed_when: false
-      #args:
-      #  creates: /etc/ipa/default.conf
       when:
         - freeipa_server_type == 'master'
       notify: Restart ipa services
 
     - name: "REPLICA 1/3 - Install ipa client"
-      ansible.builtin.command: "ipa-client-install -U {{ freeipa_client_install_options | join(' ') }}"
+      ansible.builtin.command: "ipa-client-install --unattended --server={{ freeipa_server_master_fqdn }} {{ freeipa_client_install_options | join(' ') }}"
       changed_when: false
       when:
         - freeipa_server_type == 'replica'
@@ -48,17 +41,17 @@
         - freeipa_server_type == 'replica'
 
     - name: "REPLICA 3/3 - Install replica (take a while)"
-      ansible.builtin.command: "{{ freeipa_launch_command }} {{ freeipa_replica_install_options | join(' ') }}"
+      ansible.builtin.command: "ipa-replica-install --unattended --server={{ freeipa_server_master_fqdn }} {{ freeipa_replica_install_options | join(' ') }}"
       changed_when: false
       when:
         - freeipa_server_type == 'replica'
 
-- name: "Replace ipa-rewrite"
-  ansible.builtin.template:
-    src: ipa-rewrite.conf.j2
-    dest: /etc/httpd/conf.d/ipa-rewrite.conf
-    mode: 0644
-  notify: Ipa restart
+#- name: "Replace ipa-rewrite"
+#  ansible.builtin.template:
+#    src: ipa-rewrite.conf.j2
+#    dest: /etc/httpd/conf.d/ipa-rewrite.conf
+#    mode: 0644
+#  notify: Ipa restart
 
 ## Verif
 - name: "Global - Ensure admin config / auth to Kerberos realm"
