add version on molecule play image to maintain support on old release

--- a/tasks/firewalld.yml
+++ b/tasks/firewalld.yml
@@ -5,7 +5,7 @@
     state: present
 
 - name: "Open firewall ports"
-  ansible.builtin.firewalld:
+  ansible.posix.firewalld:
     service: "{{ item }}"
     permanent: true
     state: enabled
