--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -11,14 +11,13 @@ scenario:
     - prepare
     - converge
     - idempotence
-    #- verify
+    # - verify
     - destroy
 platforms:
   - name: apps-freeipa-server-ubuntu22
     pre_build_image: true
     image: lotusnoir/ansible_molecule_test_images:ubuntu22
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
-    privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
@@ -27,7 +26,14 @@ platforms:
     pre_build_image: true
     image: lotusnoir/ansible_molecule_test_images:rocky8
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
-    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
+  - name: apps-freeipa-server-rocky9
+    pre_build_image: true
+    image: lotusnoir/ansible_molecule_test_images:rocky9
+    docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
@@ -36,7 +42,6 @@ platforms:
     pre_build_image: true
     image: lotusnoir/ansible_molecule_test_images:oraclelinux8
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
-    privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
@@ -45,7 +50,6 @@ platforms:
     pre_build_image: true
     image: lotusnoir/ansible_molecule_test_images:oraclelinux9
     docker_host: "${DOCKER_HOST:-unix://var/run/docker.sock}"
-    privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
@@ -53,6 +57,8 @@ platforms:
 
 provisioner:
   name: ansible
+  connection_options:
+    ansible_remote_tmp: /tmp
   playbooks:
     prepare: prepare.yml
     converge: playbook.yml
