--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,6 +9,7 @@ galaxy_info:
   platforms:
     - name: "Ubuntu"
       versions:
+        - "noble"
         - "jammy"
     - name: "Rocky"
       versions:
