--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,13 +4,13 @@ galaxy_info:
   role_name: apps_freeipa_server
   description: "Install and configure freeipa server"
   license: "Apache License, Version 2.0"
-  min_ansible_version: 2.8
+  min_ansible_version: "2.8"
 
   platforms:
     - name: "Ubuntu"
       versions:
-        - "noble"
         - "jammy"
+        - "noble"
     - name: "Rocky"
       versions:
         - "8"
