update core + add support (debian13 / oraclelinux10 / rocky10)

--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -13,6 +13,7 @@ scenario:
     - idempotence
     # - verify
     - destroy
+
 platforms:
   - name: apps-freeipa-server-ubuntu22
     image: lotusnoir/ansible_molecule_test_images:ubuntu22
@@ -32,6 +33,15 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - python3
+  - name: apps-freeipa-server-rocky10
+    image: lotusnoir/ansible_molecule_test_images:rocky10
+    pre_build_image: true
+    cgroupns_mode: host
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
   - name: apps-freeipa-server-rocky8
     image: lotusnoir/ansible_molecule_test_images:rocky8
     pre_build_image: true
@@ -43,6 +53,15 @@ platforms:
       - python3
   - name: apps-freeipa-server-rocky9
     image: lotusnoir/ansible_molecule_test_images:rocky9
+    pre_build_image: true
+    cgroupns_mode: host
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
+  - name: apps-freeipa-server-oraclelinux10
+    image: lotusnoir/ansible_molecule_test_images:oraclelinux10
     pre_build_image: true
     cgroupns_mode: host
     privileged: true
@@ -74,6 +93,17 @@ provisioner:
   connection_options:
     ansible_remote_tmp: /tmp
     ansible_python_interpreter: auto_silent
+  config_options:
+    defaults:
+      roles_path: "${HOME}/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:$MOLECULE_PROJECT_DIRECTORY/.."
+      callbacks_enabled: timer, profile_tasks, profile_roles
+      verbosity: 3
+      forks: 20
+      host_key_checking: false
+    ssh_connection:
+      pipelining: true
+      ssh_args: -o ControlMaster=auto -o ControlPersist=600s
+  log: true
   playbooks:
     prepare: prepare.yml
     converge: playbook.yml
@@ -85,6 +115,8 @@ provisioner:
       bullseye:
         ansible_python_interpreter: "/usr/bin/python3.9"
       bookworm:
+        ansible_python_interpreter: "/usr/bin/python3.9"
+      trixie:
         ansible_python_interpreter: "/usr/bin/python3.9"
 
 verifier:
